--- a/src/main/resources/templates/Posts/Cats/info-cats.html
+++ b/src/main/resources/templates/Posts/Cats/info-cats.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Index posts</title>
+  <title>Info posts</title>
   <link rel="stylesheet"  href="/style.css"/>
 </head>
 <body>
@@ -14,15 +14,15 @@
   <h2 th:text="${el.breed}"></h2>
   <h3 th:text="${el.color}"></h3>
   <p th:text="${el.colorOfEys}"></p>
-  <a th:href="'/cats/' + ${el.id}">Прочитать пост</a>
   <div class="cardAction">
     <p th:text="'Вес: '+ ${el.weight}"></p>
-    <p th:text="'рост: '+ ${el.height}"></p>
+    <p th:text="'Рост: '+ ${el.height}"></p>
+    <a th:href="'/cats/delete/' + ${el.id}" class="back">Удалить</a>
+    <a th:href="'/cats/edit/' + ${el.id}" class="btn">Изменить</a>
   </div>
 </div>
 <div class="footerNewsAction">
-  <a href="/cats/add" class="btn">Создать котика</a>
-  <a href="/posts/" class="back">Объявления</a>
+  <a href="/cats/" class="back">Назад</a>
 </div>
 </body>
 </html>
