create five prakt

--- a/src/main/resources/templates/Cats/index.html
+++ b/src/main/resources/templates/Cats/index.html
@@ -24,5 +24,8 @@
   <a href="/cats/add" class="btn">Создать котика</a>
   <a href="/posts/" class="back">Объявления</a>
 </div>
+<form th:action="@{/logout}" method="post">
+  <input type="submit" value="Выйти"/>
+</form>
 </body>
 </html>
