--- a/src/main/resources/templates/Posts/index.html
+++ b/src/main/resources/templates/Posts/index.html
@@ -24,5 +24,8 @@
     <a href="/posts/add" class="btn">Создать новость</a>
     <a href="/cats/" class="btn">Котики</a>
 </div>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Выйти"/>
+</form>
 </body>
 </html>
